Setup React Native project for Landlord app

--- a/frontend/landlord/.gitignore
+++ b/frontend/landlord/.gitignore
@@ -1,13 +1,7 @@
-# Node Modules
-node_modules/
+# OS generated files
+.DS_Store
+Thumbs.db
 
-# React Native specific files
-ios/build/
-android/app/build/
-
-# Expo files (if using Expo)
-.expo
-.expo-shared
 
 # Log files
 *.log
@@ -16,6 +10,83 @@ android/app/build/
 .env
 .env.*.local
 
-# OS generated files
-.DS_Store
-Thumbs.db
+
+# Xcode
+#
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+**/.xcode.env.local
+
+# Android/IntelliJ
+#
+build/
+.idea
+.gradle
+local.properties
+*.iml
+*.hprof
+.cxx/
+*.keystore
+!debug.keystore
+.kotlin/
+
+# node.js
+#
+node_modules/
+npm-debug.log
+yarn-error.log
+
+# React Native specific files
+ios/build/
+android/app/build/
+
+# fastlane
+#
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://docs.fastlane.tools/best-practices/source-control/
+
+**/fastlane/report.xml
+**/fastlane/Preview.html
+**/fastlane/screenshots
+**/fastlane/test_output
+
+# Bundle artifact
+*.jsbundle
+
+# Ruby / CocoaPods
+**/Pods/
+/vendor/bundle/
+
+# Temporary files created by Metro to check the health of the file watcher
+.metro-health-check*
+
+# testing
+/coverage
+
+# Expo files (if using Expo)
+.expo
+.expo-shared
+
+# Yarn
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
